--- a/main.html
+++ b/main.html
@@ -68,9 +68,9 @@
 		<sub data-ns-test="block-inline-sub">Test2</sub>
 		Answer: Inline
 	</div>
-    <script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./script.js">
+</script>
 
 </body>
 
 </html>
-   
